Mon Feb  5 20:16:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Collocated_Invocation.cpp:
        * tao/GIOP_Message_Base.cpp:
        * tao/GIOP_Message_Lite.cpp:
        * tao/Invocation_Base.cpp:
        * tao/Invocation_Base.h:
        * tao/Messaging/Asynch_Invocation.cpp:
        * tao/ORB.cpp:
        * tao/Synch_Invocation.cpp:
        * tao/TAO_Singleton_Manager.cpp:
        * tao/TAO_Singleton_Manager.h:
          Committed on behalf of Ossama Othman. Added needed code to
          work correctly in case of C++ exceptions without ACE_THROW_SPEC
          spefication. To make sure this all works we are changing ACE
          to expand ACE_THROW_SPEC to nothing, when the scoreboard shows
          no problems we will zap ACE_THROW_SPEC from all source code.

Mon Feb  5 06:20:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/DynamicAny/DynAnyFactory.cpp:
        * tao/DynamicAny/DynArray_i.cpp:
        * tao/DynamicAny/DynCommon.cpp:
          Layout changes

Sun Feb  4 19:57:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Bounded_Basic_String_Sequence_T.h:
        * tao/String_Const_Sequence_Element_T.h:
        * tao/String_Sequence_Element_T.h:
        * tao/Unbounded_Basic_String_Sequence_T.h:
          Fixed bug 2792, thanks to Frank Pilhofer <fp at mc dot com>
          for reporting this

        * tao/Bug_2792_Regression/Bug_2792_Regression.mpc:
        * tao/Bug_2792_Regression/Bug_2792_Regression/client.cpp:
        * tao/Bug_2792_Regression/Bug_2792_Regression/run_test.pl:
          New regression test

Sun Feb  4 18:51:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Object.cpp
        * tao/Object_T.cpp
        * tao/Object_T.h
        * tao/PortableServer/LifespanStrategyFactoryImpl.cpp
        * tao/PortableServer/LifespanStrategyPersistent.cpp
        * tao/PortableServer/LifespanStrategyPersistentFactoryImpl.cpp